<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <group android:checkableBehavior="single">
        <item
            android:id="@+id/item_schedule"
            android:icon="@drawable/ic_calendar_agenda"
            android:title="@string/schedule" />
        <item
            android:id="@+id/item_day"
            android:icon="@drawable/ic_calendar_day"
            android:title="@string/day" />
        <item
            android:id="@+id/item_three_days"
            android:icon="@drawable/ic_calendar_3_day"
            android:title="@string/three_days" />
        <item
            android:id="@+id/item_week"
            android:icon="@drawable/ic_calendar_week"
            android:title="@string/week" />
        <item
            android:id="@+id/item_month"
            android:icon="@drawable/ic_calendar_month"
            android:title="@string/month" />
    </group>
</menu>